--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,4 @@
+Options -MultiViews
 RewriteEngine On
-RewriteBase /
-RewriteRule ^index\.php＄ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . index.php.php [L]
+RewriteRule ^ index.php [QSA,L]
